# bazel-offline

./: .bazelrc  .gitignore  MODULE.bazel  README.md  build_offline_repo_cache.py  cpp_modules.txt  download_modules.py  module_generator.py  registry_generator.py  run.sh
