module(name = "offline_prefetch_workspace")

bazel_dep(name = "2021-09", version = "01")
bazel_dep(name = "abseil-cpp", version = "20240116.0")
bazel_dep(name = "abseil-cpp", version = "20240116.1")
bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "abseil-cpp", version = "20240116.3")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "abseil-cpp", version = "20240722.1")
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "abseil-cpp", version = "20250512.0")
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "abseil-cpp", version = "20250814.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "archive", version = "1.0.1")
bazel_dep(name = "archive", version = "10e50ad")
bazel_dep(name = "archive", version = "12f255231938d30493186b0a037feedd70f5a1c1")
bazel_dep(name = "archive", version = "160625a9728b4031a21ad1e1c0146ea2c3a851eb")
bazel_dep(name = "archive", version = "2.9.6")
bazel_dep(name = "archive", version = "21be8b5e40c66659456358555af1f980f6b56300")
bazel_dep(name = "archive", version = "43fcf6e07643ed955ec838b0194da3b6dd1b5f0f")
bazel_dep(name = "archive", version = "5ad3bf8444cfc663b11bf367baaa31f36e7ff7c8")
bazel_dep(name = "archive", version = "5ed309d3de0c647a91bb41b2be68603c39aef452")
bazel_dep(name = "archive", version = "61a97efa24a5ce01fb8cc73c9d1e6e7060f8ea98")
bazel_dep(name = "archive", version = "7f931c4e72727332ca2918a6e28b984fd54d7d2d")
bazel_dep(name = "archive", version = "a5477045acaa34586420942098f5fecd3570f577")
bazel_dep(name = "archive", version = "d1a4256b3a019117f2bb6cb8c63d6367aaf512e2")
bazel_dep(name = "archive", version = "e14f3fd")
bazel_dep(name = "archive", version = "e5f26018368b11aab672e8e8bb76513f3620c579")
bazel_dep(name = "archive", version = "e7430e66d6e51def2a88f0b66fdab62b0d9492c1")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.04.10")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.04.14")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.07.21")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.07.22")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.07.28")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.08.06")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.09.15")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.09.29")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.10.31")
bazel_dep(name = "bazel-portable-cc-toolchain", version = "2025.11.14")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "c-ares", version = "1.15.0")
bazel_dep(name = "c-ares", version = "1.16.1")
bazel_dep(name = "c-ares", version = "1.19.1")
bazel_dep(name = "c-ares", version = "1.34.5")
bazel_dep(name = "hermetic-cc-toolchain", version = "2.1.2")
bazel_dep(name = "hermetic-cc-toolchain", version = "2.1.3")
bazel_dep(name = "hermetic-cc-toolchain", version = "2.2.0")
bazel_dep(name = "hermetic-cc-toolchain", version = "2.2.1")
bazel_dep(name = "hermetic-cc-toolchain", version = "2.2.3")
bazel_dep(name = "hermetic-cc-toolchain", version = "3.0.0")
bazel_dep(name = "hermetic-cc-toolchain", version = "3.0.1")
bazel_dep(name = "hermetic-cc-toolchain", version = "3.1.0")
bazel_dep(name = "hermetic-cc-toolchain", version = "3.1.1")
bazel_dep(name = "hermetic-cc-toolchain", version = "3.2.0")
bazel_dep(name = "hermetic-cc-toolchain", version = "4.0.0")
bazel_dep(name = "hermetic-cc-toolchain", version = "4.0.1")
bazel_dep(name = "hermetic-clang-toolchain", version = "1.0.0")
bazel_dep(name = "hermetic-clang-toolchain", version = "1.0.1")
bazel_dep(name = "highway", version = "1.2.0")
bazel_dep(name = "highway", version = "1.3.0")
bazel_dep(name = "re2-2023-09", version = "01")
bazel_dep(name = "re2-2023-11", version = "01")
bazel_dep(name = "re2-2024-02", version = "01")
bazel_dep(name = "re2-2024-03", version = "01")
bazel_dep(name = "re2-2024-04", version = "01")
bazel_dep(name = "re2-2024-05", version = "01")
bazel_dep(name = "re2-2024-06", version = "01")
bazel_dep(name = "re2-2024-07", version = "01")
bazel_dep(name = "re2-2024-07", version = "02")
bazel_dep(name = "re2-2025-08", version = "12")
bazel_dep(name = "re2-2025-11", version = "05")
bazel_dep(name = "tags", version = "0.11.0")
bazel_dep(name = "tags", version = "0.12.0")
bazel_dep(name = "tags", version = "0.12.3")
bazel_dep(name = "tags", version = "0.13.0")
bazel_dep(name = "tags", version = "0.14.0")
bazel_dep(name = "tags", version = "0.16.3")
bazel_dep(name = "tags", version = "0.22.0")
bazel_dep(name = "tags", version = "0.7.15")
bazel_dep(name = "tags", version = "1.0.4")
bazel_dep(name = "tags", version = "1.1.0")
bazel_dep(name = "tags", version = "1.2.0")
bazel_dep(name = "tags", version = "1.2.1")
bazel_dep(name = "tags", version = "1.3.0")
bazel_dep(name = "tags", version = "1.3.2")
bazel_dep(name = "tags", version = "1.4.0")
bazel_dep(name = "tags", version = "1.6.1")
bazel_dep(name = "tags", version = "10.0.0")
bazel_dep(name = "tags", version = "2.0-rc1")
bazel_dep(name = "tags", version = "2.0.0")
bazel_dep(name = "tags", version = "2.0.2")
bazel_dep(name = "tags", version = "2.1")
bazel_dep(name = "tags", version = "2.1.0")
bazel_dep(name = "tags", version = "2.1.7")
bazel_dep(name = "tags", version = "2.12.0")
bazel_dep(name = "tags", version = "2.2")
bazel_dep(name = "tags", version = "2.2.0")
bazel_dep(name = "tags", version = "2.2.4")
bazel_dep(name = "tags", version = "2.22.0")
bazel_dep(name = "tags", version = "2.3.0")
bazel_dep(name = "tags", version = "2.3.4")
bazel_dep(name = "tags", version = "2.4.0")
bazel_dep(name = "tags", version = "2.9.2")
bazel_dep(name = "tags", version = "20210324.2")
bazel_dep(name = "tags", version = "20211102.0")
bazel_dep(name = "tags", version = "20220623.1")
bazel_dep(name = "tags", version = "20230125.1")
bazel_dep(name = "tags", version = "20230802.0")
bazel_dep(name = "tags", version = "20230802.1")
bazel_dep(name = "tags", version = "4.10.0")
bazel_dep(name = "tags", version = "4.2.1")
bazel_dep(name = "tags", version = "4.3.1")
bazel_dep(name = "tags", version = "4.3.11")
bazel_dep(name = "tags", version = "4.3.5")
bazel_dep(name = "tags", version = "4.3.6")
bazel_dep(name = "tags", version = "49")
bazel_dep(name = "tags", version = "5.10.0")
bazel_dep(name = "tags", version = "9.0.0")
bazel_dep(name = "toolchains-protoc", version = "0.2.0")
bazel_dep(name = "toolchains-protoc", version = "0.2.1")
bazel_dep(name = "toolchains-protoc", version = "0.2.3")
bazel_dep(name = "toolchains-protoc", version = "0.2.4")
bazel_dep(name = "toolchains-protoc", version = "0.3.0")
bazel_dep(name = "toolchains-protoc", version = "0.3.1")
bazel_dep(name = "toolchains-protoc", version = "0.3.2")
bazel_dep(name = "toolchains-protoc", version = "0.3.3")
bazel_dep(name = "toolchains-protoc", version = "0.3.4")
bazel_dep(name = "toolchains-protoc", version = "0.3.5")
bazel_dep(name = "toolchains-protoc", version = "0.3.6")
bazel_dep(name = "toolchains-protoc", version = "0.3.7")
bazel_dep(name = "toolchains-protoc", version = "0.4.0")
bazel_dep(name = "toolchains-protoc", version = "0.4.1")
bazel_dep(name = "toolchains-protoc", version = "0.4.2")
bazel_dep(name = "toolchains-protoc", version = "0.4.3")
bazel_dep(name = "toolchains-protoc", version = "0.5.0")
bazel_dep(name = "toolchains-protoc", version = "0.6.0")
